--- a/form_2.html
+++ b/form_2.html
@@ -104,30 +104,94 @@
             
             <!-- enlaces -->
             <div class="collapse navbar-collapse" id="opciones">   
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="quienes_somos.html">Quienes somos</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="galeria.html">Galeria</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="formulario1.html">Inscripcion cursos</a>
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
                   </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="formulario2.html">comentanos tus ideas</a>
-                </li>                
-              </ul>
-            </div>
+                  <li class="nav-item">
+                    <a class="nav-link" href="quienes_somos.html">Quienes somos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="galeria.html">Galeria</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="formulario1.html">Inscripcion cursos</a>
+                    </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="formulario2.html">comentanos tus ideas</a>
+                  </li>                
+                </ul>
+              </div>
         <div>
           </nav>
-            
+        <br>
+        <br>
+        <h1>Cuentanos tus ideas de aplicaciones de la tecnología dron:</h1>
+          <br>
+          <br>
+          <form name="datos" action="form_receptor.html" method="POST">
+              <label for="lnombre">Nombres de Usuario:</label>
+              <br>
+              <input type="text" id="nom" name="nombre" value=""  placeholder="Ingrese sus nombre" autofocus required > <br>
+              <br>
+              <label for="lapellido">Apellidos Usuario:</label>
+              <br>
+              <input type="text" id="ape" name="apellido" placeholder="Ingrese sus apellido" required ><br>
+              <br>
+              <label for="ledad">Edad Usuario:</label>
+              <br>
+              <input type="text" id="ed" name="edad" placeholder="Ingrese sus edad" required ><br>
+              <br>
+              <label for="lcorreo">Correo:</label>
+              <br>
+              <input type="text" id="corr" name="correo" value=""  placeholder="xxx@yyyy.com" autofocus required > <br>
+              <br>
+              <label for="correo">Correo:</label>
+              <select name="region" id=reg >
+                  <option value="1">Arica y Parinacota</option>
+                  <option value="2">Tarapacá</option>
+                  <option value="3">Antofagasta</option>
+                  <option value="4">Atacama</option>
+                  <option value="5">Coquimbo</option>
+                  <option value="6">Valparaiso</option>
+                  <option value="7">Región Metropolitana de Santiago</option>
+                  <option value="8">Región del libertador General Bernardo O’Higgins</option>
+                  <option value="9">Maule</option>
+                  <option value="10">Ñuble</option>
+                  <option value="11">Biobío</option>
+                  <option value="12">La Araucanía</option>
+                  <option value="13">Los Ríos</option>
+                  <option value="14"> Los Lagos</option>
+                  <option value="15">Aysén del General Carlos Ibáñez del Campo</option>
+                  <option value="16">Magallanes y la Antártica Chilena</option>
 
-
-
+              </select>
+              <br>
+              <br>
+              <label for="lgenero">Seleccione género:</label>
+              <input type="radio" id="hombre" name="genero" value="hombre">
+              <label for="hombre">Hombre</label>
+              <input type="radio" id="mujer" name="genero" value="mujer">
+              <label for="mujer">Mujer</label>
+              <input type="radio" id="otro" name="genero" value="otro">
+              <label for="otro">Otro</label>
+              <br>
+              <br>
+              <label for="ldron">¿Posee dron?:</label>
+            <input type="radio" id="si" name="dron" value="si">
+            <label for="si">Si</label>
+            <input type="radio" id="no" name="dron" value="no">
+            <label for="no">No</label>
+            <br>
+            <br>
+            <label for="mensaje">¡Comentanos tu idea!</label><br>
+            <textarea cols="300" rows="5" id="mensaje" name="mensaje"></textarea>
+            <br>
+            <br>
+            <input type="submit" value="Enviar">
+            <input type="reset" value="Limpiar">
+            <br>
+            <br>
 
 
 
