Se incorporan a la pagina form_1, funciones DOM en las casillas de texto y el el titulo: Inscripciones de cursos

--- a/form_2.html
+++ b/form_2.html
@@ -228,7 +228,13 @@
           </nav>
         <br>
         <br>
-        <h1>Cuentanos tus ideas de aplicaciones de la tecnología dron:</h1>
+        
+          
+            <h1>
+              <p class="ex1" >
+                Cuentanos tus ideas de aplicaciones de la tecnología dron:
+              </p>
+            </h1>
           <br>
           <br>
           <div id="caja">
