se añade consumo de servicio web rest en nueva pagina.

--- a/form_2.html
+++ b/form_2.html
@@ -221,6 +221,9 @@
                     </li>
                   <li class="nav-item">
                       <a class="nav-link" href="formulario2.html">comentanos tus ideas</a>
+                  </li>   
+                  <li class="nav-item">
+                    <a class="nav-link" href="api.html">Feriados para volar</a>
                   </li>                
                 </ul>
               </div>
