--- a/galeria.html
+++ b/galeria.html
@@ -119,7 +119,10 @@
                     </li>
                   <li class="nav-item">
                       <a class="nav-link" href="formulario2.html">comentanos tus ideas</a>
-                  </li>                
+                  </li>     
+                  <li class="nav-item">
+                    <a class="nav-link" href="api.html">Feriados para volar</a>
+                </li>              
                 </ul>
               </div>
         <div>
